<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/touxiang"
                android:layout_gravity="center"
                app:civ_border_color="@color/blue"
                app:civ_border_width="2dp"
                app:layout_anchor="@+id/collapsing"
                app:layout_anchorGravity="right|bottom"
                app:layout_behavior="@string/avatar_behavior" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="#ebebef">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:showBottomLine="true"
                app:showLeftImg="@drawable/baseline_account_box_black_24"
                app:showText="@string/personal_info" />

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:showBottomLine="true"
                app:showLeftImg="@drawable/baseline_receipt_black_24"
                app:showText="@string/personal_plan" />

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:showBottomLine="false"
                app:showLeftImg="@drawable/baseline_bookmarks_black_18"
                app:showText="@string/personal_collect" />

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                app:showBottomLine="true"
                app:showLeftImg="@drawable/baseline_lock_black_24"
                app:showText="@string/personal_change_password" />

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_change_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:showBottomLine="true"
                app:showLeftImg="@drawable/baseline_phone_android_black_24"
                app:showText="@string/personal_change_phone" />

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:showBottomLine="true"
                app:showLeftImg="@drawable/settings"
                app:showText="@string/personal_setting" />

            <com.jwstudio.enwords.home.view.PersonalItemView
                android:id="@+id/piv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:showBottomLine="false"
                app:showLeftImg="@drawable/information"
                app:showText="@string/personal_version" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>